# TiraLabra2023

./: .coveragerc  README.md  pyproject.toml
Dokumentaatio/: Toteutusdokumentti.md  kayttoohje.md  maarittelydokumentti.md  testaus_k_t.md  testausdokumentti.md
Dokumentaatio/Viikkoraportit/: Loppurutistus.md  Viikko1.md  Viikko2.md  Viikko3.md  Viikko4.md  Viikko5.md  Viikko6.md
Koodi/: .coverage  .coveragerc  pyproject.toml
Koodi/src/: index.py  kivi_sakset_paperi.py  malli.py  puu.py  tulokset.py  vastustaja_tekoaly.py  vastustaja_tekoaly_test.py
Koodi/src/tests/: tulokset_test.py
src/: index.py  kayttoliittyma.py  kivi_sakset_paperi.py  malli.py  puu.py  tulokset.py  vastustaja_tekoaly.py
src/tests/: kivi_sakset_paperi_test.py  malli_test.py  puu_test.py  tulokset_test.py  vastustaja_tekoaly_test.py
