[tool.poetry]
name = "TiraLabra2023"
version = "0.1.0"
description = ""
authors = ["Kilpivii <viivi.kilpiainen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
coverage = "^7.2.2"
pylint = "^2.15.7"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
